# parallelfun-api/app/article/internal/biz/entity.go
@@ -1,0 +1,10 @@
+package biz
+
+import "gorm.io/gorm"
+
+type Article struct {
+	gorm.Model
+	Title    string
+	Content  string
+	AuthorID string
+}
